--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend the confort of reassurance to every breed</h1>
+                <h1>Extend the confort of reassurance to every breed.</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4 class="text-center">
@@ -171,19 +171,23 @@
             </table>
         </div>
     </div>
+    <p>
+        <strong>Available in boxes of 1 or 2 chewables!</strong>
+    </p>
     <div class="row simpleheaderrow">
         <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE <br />DEFENSE AGAINST FLEA AND TICK INFESTATIONS</h2>
         <p>
             Bravecto is a tasty chewable flea and tick treatment that gives dogs up to 12 weeks of protection
-            against fleas and ticks. Covering a  broad-spectrum of fleas and ticks in every breed, Bravecto can be
-            used to treat dogs that already have infestations. It takes only about 2 hours for ectoparasites to
+            against fleas and ticks. Covering a wide range -spectrum of fleas and ticks in every breed, Bravecto can be
+            used to treat dogs that already have infestations, as well as given as a preventative measure. It takes only about 2 hours for ectoparasites to
             start dying, and all are killed within 12 hours.
         </p>
         <p>
             Bravecto is available in five sizes - so dogs of every size can enjoy the same, long-lasting
-            protection. Each chew is packaged individually - meaning your customers will have to come back
-            multiple times for a yearly prescription. This will help keep you in closer touch with your customers,
-            and deepen your relationips.
+            protection. You can offer boxes of either 1 or 2 chews – so you can schedule times throughout
+            the year for pet owners to come back to your office for refills.
+            This can give you opportunities to offer other important treatments and services,
+            keeping you in closer touch with your customers, and deepening your relationships.
         </p>
         <p>
             <a class="orange" href="/bravecto/contact-us"><span class="orange">Contact your Merck sales representative</span></a> today to learn more
@@ -203,8 +207,8 @@
     </div>
     <div class="row">
         <p>
-            * &nbsp;Bravecto kills fleas, prevents flea infestations, and kills ticks (black-legged tick, American dog tick, and brown dog tick) for 12 weeks
-            <br /> &nbsp;&nbsp;&nbsp;Bravecto also kills lone star ticks for 8 weeks
+            * &nbsp;BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
         <p>
             ** Dogs over 123.0 lbs. should be administered the appropriate combination of chews.
