--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -30,9 +30,9 @@
         <div class="row">
             <div class="col-md-6">
                 <p>
-                    Merck Animal Health, the makers of Bravecto, know that in order
-                    to prescribe Bravecto to your customers, you need the right resources to ensure
-                    success. That's why we've curated resources to help you keep up to date with clinical
+                    Merck Animal Health, the maker of Bravecto, is here to help you fully understand our new product
+                    so that you can confidently prescribe it to your customers – and help them trust it.
+                    That's why we've curated resources to help you keep up to date with clinical
                     reserch, learn more about Bravecto, and discover more ways to attract and build
                     loyalty from customers.
                 </p>
@@ -42,7 +42,7 @@
                 <div class="bottom-support-download-row">
                     <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
                     <div class="bottom-support-download">
-                        <h3>GOOD MEDICINE GROW BUSINESS</h3>
+                        <h3>GOOD MEDICINE GROWS BUSINESS</h3>
                         <p>
                             Discover how prescribing innovative treatments to the animals
                             in your care enhances business growth with this new eBook.
