--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -15,8 +15,7 @@
             <div class="col-md-6">
                 <h3>FILTER CONTENT BY TOPIC / TYPE</h3>
                 <p>
-                    Check the boxes to the right to find additional resources
-                    on using social media to grow your business.
+                    Check the boxes to the right to find curated posts to share, specific to content topic or type
                 </p>
             </div>
             <div class="col-md-6">
