--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -14,12 +14,11 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend the biggest innovation in a decade to every dog.</h1>
+                <h1>Extend the best care with a partner at your side.</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4>
-                    Prescribe your customers the best care for their dogs with the fastest-acting, longest-lasting
-                    flea and tick treatment available in a chew.
+                    Partner with Merck Animal Health for the support you need to provide the best care to your customers.
                 </h4>
             </div>
         </div>
@@ -52,25 +51,37 @@
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img2.jpg" />
                 <p>
-                    <span class="header">Through consumer marketing efforts</span>
-                    We help encourage new and existing customers to come to your office to inquire
-                    about
+                    <span class="header">Consumer marketing efforts </span>
+                    - Encourage new and existing customers to come to your office to inquire about and purchase Bravecto with a Bravecto PR toolkit including sample website language, press releases and radio scripts, and guidelines for social media
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img3.jpg" />
                 <p>
-                    <span class="header">Training for staff</span>
-                    Help them better engage with pet owners to help you build trust and loyaty for your practice.
+                    <span class="header">Shareable content for your clients </span>
+                    - Educate pet owners about the benefits of Bravecto and how to better care for their dogs with shareable content, such as postcards, emails, leaflets, infographics and engaging videos
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img4.jpg" />
                 <p>
-                    <span class="header">Bravecto</span>
-                    The newest online communications resources, is built to help you expand
-                    your social media visibility and drive customers to your office from Facebook and Twitter -
-                    while keeping you up to date on clinical research. Learn more about why you should have a presence in social media.
+                    <span class="header">BravoVets </span>
+                    – Consolidate your Facebook and Twitter business accounts into one exclusive, easy-to-use tool. Gain curated content posts that are ready to share with your followers, so you can expand your social media visibility and drive pet owners and existing customers to your office from online – all while keeping yourself up to date on clinical research.
+                    Learn more about why your veterinary practice should have a presence in social media >
+                </p>
+            </li>
+            <li class="clearfix">
+                <img src="~/Content/img/Bravecto_Support_img4.jpg" />
+                <p>
+                    <span class="header">Materials for your office</span>
+                    – Reinforce your recommendations for flea & tick treatment with educational materials and in-office displays that engage pet owners while they wait
+                </p>
+            </li>
+            <li class="clearfix">
+                <img src="~/Content/img/Bravecto_Support_img4.jpg" />
+                <p>
+                    <span class="header">Training for staff</span>
+                    – Help all of your staff better communicate with pet owners and extend the best of care into their interactions to help build trust and loyalty for your practice
                 </p>
             </li>
         </ul>
@@ -124,7 +135,7 @@
                 <div class="col-md-3">
                     <h3>TAKE BACK<br /> CONTROL</h3>
                     <p>
-                        Prescribe Bravecto to increase adherence and ensure every dog to treat
+                        Prescribe Bravecto to increase adherence and ensure every dog you treat
                         receives the best care.
                     </p>
                 </div>
@@ -134,13 +145,12 @@
 </div>
 <div class="container static-body support-body">
     <div class="static-body-content">
-        <h2>MAKE OUR EXPERIENCE YOUR ADVANTAGE.</h2>
+        <h2>Together, we can provide the best care to every animal you treat.</h2>
         <p>
-            When you partner with Merck, you benefit from our robust experience in marketing and providing
-            products and services that enable pets and their owners to enjoy their time together - by keeping
+            When you partner with Merck Animal Health, you can provide products and services that enable pets and their owners to enjoy their time together - by keeping
             them healthy along the way. From training to marketing to creating a social media presence,
             Merck is there for you every step of the way. With Merck at your side, you can have the confidence
-            that, when you prescribe Bravecto, you're prescribing the safest, most innovative, high-quality
+            that, when you prescribe Bravecto, you're prescribing the longest lasting, high-quality , most innovative, high-quality
             flea and tick treatment available in a chew.
         </p>
     </div>
@@ -149,7 +159,7 @@
         <div class="bottom-support-download">
             <h3>GOOD MEDICINE GROW BUSINESS</h3>
             <p>
-               Discover more about how prescribing the best care
+                Discover more about how prescribing the best care
                 enhances business growth with the "Good Medicine Grows Business" eBook
             </p>
             <a class="btn btn-default" href="#">
@@ -172,7 +182,7 @@
                 Your online presence is the single most powerful tool available for building engagement and involvement
                 with pet owners. That's because pet owners actively seek out new ways to connect with like-minded
                 animal lovers and find useful information about pet health and wellness via the internet. In fact,
-                70% of pet owners spend up to 30 minutes per week reviewing pet-related topics online.
+                70% of pet owners spend up to 30 minutes per week reviewing pet-related topics online<sup>1</sup>.
             </p>
         </div>
         <div class="row">
@@ -181,16 +191,17 @@
             </div>
             <div class="col-md-6 support-screen-text">
                 <p>
-                    BravoVets is the ideal way to engage with your clients and
-                    deliver important news about a major advance in flea and tick protection.
+                    BravoVets is the ideal way to engage with your clients and deliver important news about the latest innovations that improve care for their pets, like Bravecto.
                     By linking your Facebook and Twitter business accounts to BravoVets, you can provide
-                    the information pet owners are looking for to ultimately increase your customer network
+                    the information pet owners are looking for from one platform – to ultimately increase your customer network
                     and establish yourself as an authority in your field.
                 </p>
                 <p>
                     With 69% of online adults (that's about half of the entire adult US population)
-                    using an online social network2 - it's a business imperative to make your presence known.
+                    using an online social network<sup>2</sup> - it's a business imperative to make your presence known.
                 </p>
+                <a href="#">LINK TO FACEBOOK</a>
+                <a href="#">LINK TO TWITTER</a>
             </div>
         </div>
     </div>
@@ -201,9 +212,9 @@
         <div class="bottom-support-download">
             <h3>COST ANALYSIS PDF</h3>
             <p>
-                See how you can help increase business by 
+                See how you can help increase business by
                 bringing new and more dogs to your clinic by
-                prescribing Bravecto with this new analysis
+                prescribing Bravecto with <a href="#">this new analysis</a>
             </p>
             <a class="btn btn-default" href="#">
                 DOWNLOAD PDF
@@ -227,7 +238,7 @@
 <div class="container static-body support-body">
     <div class="static-body-content">
         <p>
-           Hear from other veterinary professionals in your area about their experiences partnering with Merck
+            Hear from other veterinary professionals in your area about their experiences partnering with Merck
             Animal Health and prescribing Bravecto to their clients.
         </p>
     </div>
@@ -248,5 +259,17 @@
                 <i class="icon icon-share"></i>
             </a>
         </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <p>
+            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
+        </p>
+        <p>
+            1 Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
+            2 Rainie L, Smith A, Duggan M. Coming and going on Facebook. Pew Internet & American Life Project. 2013. A project of the PewResearchCenter, Washington, DC.
+        </p>
     </div>
 </div>
