--- a/ProfSite/Content/bravovets.css
+++ b/ProfSite/Content/bravovets.css
@@ -2,6 +2,14 @@
     top: 90px;
 }
 
+.prescribing-infolink {
+    position: absolute;
+    right: 31px;
+    top: 60px;
+    text-transform: uppercase;
+    color: #394147;
+}
+
 .navbar-brand.bravovets {
     padding: 11px 0 20px 15px;
 }
@@ -170,4 +178,8 @@ div.sitemap-wrapper {
 .social-content-items-list .social-content-item.poster-item img {
     margin-left: 20px;
     width: 115px;
+}
+.static-body.support-body.no-margin {
+    margin-bottom:0;
+    padding-bottom:0;
 }
