--- a/ProfSite/Views/BravoVets/adherence.cshtml
+++ b/ProfSite/Views/BravoVets/adherence.cshtml
@@ -14,12 +14,12 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend the biggest innovation in a decade to every dog.</h1>
+                <h1>Extend a game plan for far better adherence.</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4>
-                    Prescribe your customers the best care for their dogs with the fastest-acting, longest-lasting
-                    flea and tick treatment available in a chew.
+                    Give owners and their dogs more time together without worries or gaps in
+                    protection with the only chew that lasts up to 12 weeks.*
                 </h4>
             </div>
         </div>
@@ -27,12 +27,15 @@
 </div>
 <div class="container static-body support-body">
     <div class="static-overlay bggreen">
-        <h2>SUPPORT FOR GROWTH</h2>
-        <h3>Enhance communications to provide the best care <br />and grow your practice.</h3>
+        <h2>CLOSE THE ADHERENCE GAP.</h2>
+        <h3>Help reduce time between treatments with fewer, easier doses.</h3>
         <p>
-            Pet owners are much more likely to follow your recommendations if they understand the full value
-            of a medication - for both their dogs and themselves. When you partner with Merck, we help you
-            improve those communications - and drive new customers to your clinic.
+            Did you know that the average dog is treated for fleas and ticks only 2.8 months of the year?1 What’s more, studies have found that topical, once-a-month products are used correctly in less than 12% of dogs.
+            That means that dogs spend most of the year unprotected – or insufficiently protected.
+        </p>
+        <p>
+            With Bravecto, dogs are protected from fleas and ticks for up to 12 full weeks per treatment. That’s up to 3X longer than monthly treatments – meaning fewer chances for pet owners to forget or administer treatments incorrectly.
+            <a href="/contact-us">Contact your Merck sales representative to learn about prescribing Bravecto today.</a>
         </p>
     </div>
 </div>
