--- a/ProfSite/Views/BravoVets/innovation.cshtml
+++ b/ProfSite/Views/BravoVets/innovation.cshtml
@@ -27,17 +27,38 @@
 </div>
 <div class="container static-body support-body">
     <div class="static-overlay bggreen">
-        <h2>SUPPORT FOR GROWTH</h2>
-        <h3>Enhance communications to provide the best care <br />and grow your practice.</h3>
+        <h2>A BREAKTHROUGH IN SPEED AND EFFICACY.</h2>
+        <h3>The most innovative alternative to monthly treatments is here. In a chew.</h3>
         <p>
-            Pet owners are much more likely to follow your recommendations if they understand the full value
-            of a medication - for both their dogs and themselves. When you partner with Merck, we help you
-            improve those communications - and drive new customers to your clinic.
+            Bravecto’s rapid onset, long-lasting capability is all thanks to its breakthrough molecule: fluralaner.
+            It’s a member of the isoxazoline class – the first new insecticide class in more than a decade.
+            Studies have shown no known insect or tick resistance.1 And, by extending protection against flea and
+            tick infestations up to 12 full weeks,* fluralaner’s efficacy lasts up to 3X <span class="italic">longer</span> than the active
+            ingredients in traditional monthly treatments –
+            so your customers and their dogs can enjoy more time together, worry-free.
+        </p>
+        <p>
+            <a href="/contact-us">Contact your Merck sales representative</a> to learn about prescribing Bravecto today.
         </p>
     </div>
 </div>
 <div class="container support-video-container">
     <div class="video-wrapper"></div>
+</div>
+<div class="container static-body support-body no-margin">
+    <div class="static-overlay bggreen">
+        <h2>How fluralaner works.</h2>
+        <p>
+            Once Bravecto is administered, existing fleas and ticks take up fluralaner. Fluralaner then inhibits the GABA- and Glutamate-gated chloride channels from the parasite’s nervous systems (with GABA being the primary target).
+            <br />
+            In this process, the fluralaner molecule binds to the GABA receptor, making it so chloride ions can no longer pass through the channel and the inhibitory signal fails to materialize. This leads to nerve overstimulation – ultimately killing the fleas and ticks.
+            <br />
+            This rapidly begins within 2 hours of treatment, and within 12 hours Fluralaner reaches 100% efficacy.
+        </p>
+        <p>
+            Discover how fluralaner compares to active molecules in other flea and tick treatments with this comprehensive infographic 
+        </p>
+    </div>
 </div>
 <div class="container static-body support-body">
     <div class="static-overlay bggreen">
