--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -67,7 +67,7 @@
                 <p>
                     <span class="header">BravoVets </span>
                     – Consolidate your Facebook and Twitter business accounts into one exclusive, easy-to-use tool. Gain curated content posts that are ready to share with your followers, so you can expand your social media visibility and drive pet owners and existing customers to your office from online – all while keeping yourself up to date on clinical research.
-                    Learn more about why your veterinary practice should have a presence in social media >
+                    <a href="#">Learn more about why your veterinary practice should have a presence in social media</a>
                 </p>
             </li>
             <li class="clearfix">
@@ -149,9 +149,7 @@
         <p>
             When you partner with Merck Animal Health, you can provide products and services that enable pets and their owners to enjoy their time together - by keeping
             them healthy along the way. From training to marketing to creating a social media presence,
-            Merck is there for you every step of the way. With Merck at your side, you can have the confidence
-            that, when you prescribe Bravecto, you're prescribing the longest lasting, high-quality , most innovative, high-quality
-            flea and tick treatment available in a chew.
+            Merck is there for you every step of the way. With Merck at your side, you can have the confidence that, when you prescribe Bravecto, you’re prescribing the longest lasting, high-quality flea and tick treatment available in a chew.
         </p>
     </div>
     <div class="bottom-support-download-row col-md-8 col-md-offset-2">
@@ -269,6 +267,8 @@
         </p>
         <p>
             1 Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
+        </p>
+        <p>
             2 Rainie L, Smith A, Duggan M. Coming and going on Facebook. Pew Internet & American Life Project. 2013. A project of the PewResearchCenter, Washington, DC.
         </p>
     </div>
