--- a/ProfSite/Views/BravoVets/unlinked-accounts.cshtml
+++ b/ProfSite/Views/BravoVets/unlinked-accounts.cshtml
@@ -60,8 +60,7 @@
                         <p class="header">CONNECT WITH PET OWNERS</p>
                         <p>
                             The key to reaching pet owners in your community is to be present where they are.
-                            Facebook, with its more than 1.25 billion members, makes that a high probability.
-                            <a href="#" class="link-socialaccount" data-type="facebook" data-islinked="@Model.IsFacebookLinked.ToString().ToLowerInvariant()">Link your Facebook</a> to share content that can help you grow relationships with your customers
+                            Facebook, with its more than 1.25 billion members, makes that a high probability. Link your Facebook to share content that can help you grow relationships with your customers
                             by demonstrating your clinic's expertise, knowledge and caring on a personal level.
                             <a href="#">LEARN HOW TO GET STARTED</a>
                         </p>
@@ -75,7 +74,7 @@
                         <p class="header">LEAD THE DISCUSSION</p>
                         <p>
                             Twitter can be an excellent platform to establish yourself and your clinic as an
-                            authority in leading-edge veterinary treatments. <a href="#" class="link-socialaccount" data-type="twitter" data-islinked="@Model.IsTwitterLinked.ToString().ToLowerInvariant()">Link your Twitter</a>
+                            authority in leading-edge veterinary treatments. Link your Twitter
                             to build and reach an audience of followers - of both your customers and others around the world
                             - with the latest news and trends relevant to animal health.
                             <a href="#">LEARN HOW TO GET STARTED</a>
@@ -179,9 +178,8 @@
         <div class="col-md-4">
             <p>
                 To create your business page, first log in to your personal
-                Facebook account. if you don’t have an account, <a href="/newbusiness">sign up now</a> 
+                Facebook account (if you don’t have an account, <a href="/newbusiness">sign up now</a>.)
                 Don’t worry – this doesn’t mean that fans of your clinic will see any of the personal details or content in your profile.
-                <br />
                 Then click the small "down arrow" icon on the far right of the page, near your name,
                 and choose "Create a page".
             </p>
@@ -334,6 +332,17 @@
                 }
                 <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
             </a>
+        </p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <p>
+            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
+        </p>
+        <p>
+            1 Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
         </p>
     </div>
 </div>
