--- a/ProfSite/Views/Bravopets/index.cshtml
+++ b/ProfSite/Views/Bravopets/index.cshtml
@@ -129,7 +129,7 @@
                 <img src="~/Content/img/clock_icon.png" />
                 <h4>RAPIDLY KILLS AND <br />CONTINUOUSLY PROTECTS</h4>
                 <p>
-                    Dogs from both fleas and ticks.
+                    Dogs from both fleas <span class="italic">and</span> ticks.
                 </p>
             </div>
             <div class="col-md-4">
@@ -180,13 +180,13 @@
                 Parasiticide sales and market size data suggests that directions from the vet to the owner to apply treatments monthly are often not followed1 – on average, dogs only receive protection from fleas and ticks 2.8 months out of the year. That means that, for nearly 9 months every year, many dogs are at risk for infestations – and may have an increased risk of exposure to the diseases that fleas and ticks carry. This is a big problem, as ticks are known to carry multiple infections that can lead to greater health risks.
             </p>
             <p>
-                And, as wildlife populations, forest habitats and weather patterns change,3 ticks have expanded into new territories – making them more prevalent worldwide than ever before.
+                And, as wildlife populations, forest habitats and weather patterns change,<sup>3</sup> ticks have expanded into new territories – making them more prevalent worldwide than ever before.
             </p>
             <p>
                 With just one Bravecto chew, fleas and ticks don’t stand a chance. Protect your dog from irritations and reduce the risk of tick-borne diseases with a chew that provides nearly a full-year coverage in just 4 doses. Keep your dog healthier, longer with the first and only chew that lasts up to 12 full weeks – that’s up to 3X longer than any other chewable or topical treatment available.
             </p>
             <p>
-                Only your vet can provide this length of protection from flea- and tick-borne diseases.<strong>Ask your vet about Bravecto today.</strong>
+                Only your vet can provide this length of protection from flea- and tick-borne diseases.<strong>Ask your vet about <a href="#">Bravecto</a> today.</strong>
             </p>
             <div class="row health-items">
                 <div class="col-md-4">
@@ -253,6 +253,11 @@
                 <li>Lactating dogs</li>
                 <li class="underline">“Ivermectin-sensitive” dogs</li>
             </ul>
+            <p>
+                And, because <a href="#">Bravecto</a> works from the inside out, you, your family and other pets are not exposed to the chemical formula – unlike with traditional topical flea and tick treatments.
+                <br />
+                Only your vet can provide the best and most convenient care that doesn’t compromise on efficacy and safety. <strong>Ask them about <a href="#">Bravecto</a> today.</strong>
+            </p>
         </div>
         <div class="container">
             <div class="row safety-list-items-row">
