--- a/ProfSite/Views/Shared/_LayoutBravovets.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravovets.cshtml
@@ -52,12 +52,20 @@
                         </a>
                     </li>
                     <li class="@(ViewBag.SelectedNode == "aboutus" ? "active" : "")" role="presentation"><a href="/about-us">ABOUT US</a></li>
-                    <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/contact-us">CONTACT US</a></li>
+                    <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/contact-us">CONTACT</a></li>
                 </ul>
             </nav>
+            @if(User.Identity.IsAuthenticated || User.Identity != null) {
             <a href="/linked-accounts" class="navbar-brand bravovets">
                 <img src="~/images/logo-bravovets@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
+            }
+            else
+            {
+                <a href="/unlinked-accounts" class="navbar-brand bravovets">
+                    <img src="~/images/logo-bravovets@2x.png" alt="Bravecto Logo" class="logo-bravecto">
+                </a>
+            }
         </div>
     </div>
     <div id="subheader">
@@ -92,7 +100,7 @@
                     }
                 </div>
                 <div class="col-sm-6 subheaderright">
-                    <p class="pull-left">
+                    <p class="loggedinas pull-left">
                         Logged in as [@User.Identity.Name]
                     </p>
                     <ul class="list-unstyled subnavigation subnavigation-right">
